[package]
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
name = "gitlab-sync"
version = "0.1.0"
license = "unlicense"

[dependencies]
docopt = "1.0.0"
env_logger = "0.5.10"
failure = "0.1.1"
git2 = "0.7.2"
gitlab = "0.904"
lazy_static = "1.0.1"
log = "0.4.3"
serde = "1.0.70"
serde_derive = "1.0.70"
