[package]
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
name = "gitlab-sync"
description = "Imports gitlab MRs into the local repository using the git-series format"
version = "0.1.0"
license = "unlicense"

[dependencies]
env_logger = "0.5.10"
failure = "0.1.1"
failure_derive = "0.1.1"
git2 = "0.7.2"
gitlab = "0.1008"
log = "0.4.3"
structopt = "0.2.10"
